Update release notes, trim add-opens