@@ -199,7 +199,6 @@
           <!-- Needed by some of the tests -->
           <argLine>--add-opens=java.base/java.lang=tools.jackson.databind
                    --add-opens=java.base/java.util=tools.jackson.databind
-                   --add-opens=java.sql/java.sql=tools.jackson.databind
           </argLine>
           <!-- 26-Nov-2019, tatu: moar parallelism! Per-class basis, safe, efficient enough
                   ... although not 100% sure this makes much difference TBH
@@ -335,7 +334,6 @@
             <configuration>
                <argLine>--add-opens=java.base/java.lang=tools.jackson.databind
                         --add-opens=java.base/java.util=tools.jackson.databind
-                        --add-opens=java.sql/java.sql=tools.jackson.databind
                </argLine>
             </configuration>
           </plugin>
